# pensieve-mcp

./: .gitignore  README.md  SETUP_GUIDE.md  USER_GUIDE.md  install.sh  mcp.json  pyproject.toml  requirements_client.txt  run_server.sh  run_server_api.sh  test_mcp.py  update_public_url.sh
api_server/: Dockerfile  docker-compose.yml  main.py  requirements.txt
api_server/static/: conversation.html  dashboard.html  features.html  guide.html  index.html  setup.html
api_server/static/js/: app.js  conversation.js  dashboard.js  features.js
config-examples/: claude_desktop_config_cloud.json  claude_desktop_config_public.json
deploy/: deploy-azure.sh  deploy-without-docker.sh  manual-deploy-steps.md
mcp_server/: server.py  server_api.py
