[project]
name = "pensieve-mcp"
version = "0.1.0"
description = "MCP server for saving and retrieving conversation history across AI assistants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "mcp>=1.1.2",
    "httpx>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
